<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JEWEL</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="username">UserID</string>
    <string name="password">Password</string>
    <string name="forgot_password">
        <b>
            <u>Forgot Password?</u>
        </b>
    </string>
    <string name="sign_in">Sign in</string>
    <string name="projectname">Project Name</string>
    <string name="startdate">Start Date</string>
    <string name="list_of_projects">List of Projects</string>
    <string name="list_of_elephants_in_project">List of elephants in Project</string>
    <string name="add">
        <u>ADD</u>
    </string>
    <string name="update">
        <u>UPDATE</u>
    </string>
    <string name="report">
        <u>REPORT</u>
    </string>
    <string name="photos">Photos</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="treatment">Treatment History</string>
    <string name="vaccination">Vaccination History</string>
    <string name="activities">Activities</string>
    <string name="all">All</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="type">Type</string>
    <string name="title">Title</string>
    <string name="discription">Discription</string>
    <string name="treat">Trea</string>
    <string name="vaccin">Vac</string>
    <string name="note">DeW</string>
    <string name="submit">Submit</string>
    <string name="fillupby">Fillup By</string>
    <string name="id">ID</string>
    <string name="profilepic">Profile photo</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="birthyear">Birth Year</string>
    <string name="chipno">Chip No.</string>
    <string name="workplace">Work place</string>
    <string name="location">Location</string>
    <string name="brought">Brought from</string>
    <string name="owner">Owner</string>
    <string name="diedate">Die date</string>
    <string name="activity">Activity</string>
    <string name="daterow">Date:</string>
    <string name="takenbyrow">Taken By:</string>
    <string name="typerow">Type:</string>
    <string name="titlerow">Title:</string>
    <string name="disprow">Discription:</string>
    <string name="search">Search here...</string>
</resources>
