<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:focusable="true"
    android:paddingBottom="10dp"
    tools:ignore="NestedWeights,ContentDescription,TooDeepLayout,TooManyViews">

    <LinearLayout android:id="@+id/selectheader" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:alpha="0.7" android:orientation="horizontal"
        android:paddingLeft="3dp" android:paddingRight="3dp" android:paddingTop="3dp">

        <TextView android:id="@+id/textselect" android:layout_width="match_parent"
            android:layout_height="match_parent" android:background="@color/black"
            android:gravity="center" android:text="@string/activity"
            android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="@color/cyan"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout android:id="@+id/layselect1" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_below="@id/selectheader" android:layout_marginTop="15dp"
        android:baselineAligned="false" android:orientation="horizontal"
        android:weightSum="2">
        <LinearLayout android:id="@+id/selectdate" android:layout_width="200dp"
            android:layout_height="wrap_content" android:layout_weight="1" android:orientation="horizontal">

            <TextView android:id="@+id/textselectdate" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_marginLeft="10dp"
                android:text="@string/date" android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@color/red"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:layout_weight="1" android:orientation="horizontal">

            <EditText android:id="@+id/textselectdate1" android:layout_width="fill_parent"
                android:layout_height="25dp" android:layout_marginLeft="5dp" android:background="@drawable/shape_edittext"
                android:hint="(yyyy/mm/dd)" android:inputType="date"
                android:paddingLeft="4dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout android:id="@+id/layselect2" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_below="@id/layselect1"
        android:layout_marginTop="15dp" android:baselineAligned="false" android:orientation="horizontal"
        android:weightSum="2">
        <LinearLayout android:id="@+id/selecttime" android:layout_width="200dp"
            android:layout_height="wrap_content" android:layout_weight="1" android:orientation="horizontal">

            <TextView android:id="@+id/textselecttime" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_marginLeft="10dp"
                android:text="@string/time" android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@color/red"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:layout_weight="1" android:orientation="horizontal">

            <EditText android:id="@+id/textselecttime1" android:layout_width="fill_parent"
                android:layout_height="25dp" android:layout_marginLeft="5dp" android:background="@drawable/shape_edittext"
                android:inputType="time" android:paddingLeft="4dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout android:id="@+id/layselect3" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_below="@id/layselect2"
        android:layout_marginTop="15dp" android:baselineAligned="false" android:orientation="horizontal"
        android:weightSum="2">
        <LinearLayout android:id="@+id/selecttype" android:layout_width="110dp"
            android:layout_height="wrap_content" android:layout_gravity="center_vertical" android:layout_weight="1"
            android:orientation="horizontal">

            <TextView android:id="@+id/textselecttype" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_marginLeft="10dp"
                android:text="@string/type" android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@color/red"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:layout_weight="1" android:orientation="horizontal"

        >

            <RadioGroup android:id="@+id/radioButtongroup" android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:checkedButton="@+id/radioButtonnone"
                android:orientation="horizontal">

                <RadioButton android:id="@+id/radioButtontreat" android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_marginLeft="2dp"
                    android:text="@string/treat" android:textStyle="bold" />

                <RadioButton android:id="@+id/radioButtonvaccin" android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_marginLeft="2dp"
                    android:text="@string/vaccin" android:textStyle="bold" />

                <RadioButton android:id="@+id/radioButtonnone" android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_marginLeft="2dp"
                    android:text="@string/note" android:textStyle="bold" />

            </RadioGroup>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:id="@+id/layselect4" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_below="@id/layselect3" android:layout_marginTop="15dp"
        android:baselineAligned="false" android:orientation="horizontal"
        android:weightSum="2">
        <LinearLayout android:id="@+id/selecttitle" android:layout_width="200dp"
            android:layout_height="wrap_content" android:layout_weight="1"
            android:orientation="horizontal">

            <TextView android:id="@+id/textselecttitle" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_marginLeft="10dp"
                android:text="@string/title" android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@color/red"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:layout_weight="1" android:orientation="horizontal">

            <EditText android:id="@+id/textselecttitle1" android:layout_width="fill_parent"
                android:layout_height="25dp" android:layout_marginLeft="5dp" android:background="@drawable/shape_edittext"
                android:inputType="textPersonName" android:paddingLeft="4dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout android:id="@+id/layselect5" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_below="@id/layselect4" android:layout_marginTop="15dp"
        android:baselineAligned="false" android:orientation="horizontal"
        android:weightSum="2">
        <LinearLayout android:id="@+id/selectdiscription" android:layout_width="200dp"
            android:layout_height="wrap_content" android:layout_weight="1"
            android:orientation="horizontal">

            <TextView android:id="@+id/textselectdiscription" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_marginLeft="10dp"
                android:text="@string/discription" android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/red"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:layout_weight="1" android:orientation="horizontal">

            <EditText android:id="@+id/textselectdiscription1" android:layout_width="fill_parent"
                android:layout_height="75dp" android:layout_marginLeft="5dp" android:background="@drawable/shape_edittext"
                android:gravity="top" android:inputType="textMultiLine"
                android:paddingLeft="4dp" android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout android:id="@+id/selectsubmit" android:layout_width="match_parent"
        android:layout_height="50dp" android:layout_alignParentBottom="true"
        android:layout_marginBottom="3dp" android:gravity="center" android:orientation="vertical"
        android:paddingLeft="10dp">

        <Button android:id="@+id/selectsubmit1" android:layout_width="60dp"
            android:layout_height="wrap_content" android:height="40dp"
            android:background="@color/grey" android:text="@string/submit" android:textColor="@color/blue"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
