<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@drawable/forthactive"
    tools:ignore="NestedWeights,ContentDescription,TooDeepLayout,TooManyViews">

    <TextView android:id="@+id/textViewforth" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp" android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/blue" android:textStyle="bold" />

    <LinearLayout android:id="@+id/gridviewone" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" android:layout_marginTop="35dp" android:clickable="true"
        android:orientation="horizontal" android:weightSum="2">


        <FrameLayout


            android:layout_width="0dp" android:layout_height="100dp" android:layout_gravity="right"
            android:layout_marginLeft="5dp" android:layout_marginTop="40dp"
            android:layout_weight="1.00"


        >


            <com.elefante.RoundedImageView android:id="@+id/photosview" android:layout_width="100dp"
                android:layout_height="100dp" android:layout_gravity="center"
                android:contentDescription="Profile image" android:cropToPadding="true"
                android:padding="1dp" android:scaleType="centerCrop" />


        </FrameLayout>


        <Button android:id="@+id/profileview" android:layout_width="0dp"
            android:layout_height="100dp" android:layout_gravity="right"
            android:layout_marginLeft="5dp" android:layout_marginTop="40dp"
            android:layout_weight="1.00" android:alpha="0.6" android:clickable="true"
            android:text="@string/profile" android:textColor="@color/red" android:textSize="20sp"
            android:textStyle="bold"></Button>
    </LinearLayout>

    <LinearLayout android:id="@+id/gridviewtwo" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_alignParentLeft="true"
        android:layout_below="@+id/gridviewone" android:layout_marginBottom="35dp"
        android:layout_marginLeft="5dp" android:layout_marginRight="5dp"
        android:layout_marginTop="5dp" android:clickable="true" android:orientation="horizontal"
        android:weightSum="2">

        <Button android:id="@+id/historyview" android:layout_width="0dp"
            android:layout_height="100dp" android:layout_gravity="left"
            android:layout_marginBottom="40dp" android:layout_marginRight="5dp"
            android:layout_weight="1.00" android:alpha="0.6" android:clickable="true"
            android:text="@string/history" android:textColor="@color/red" android:textSize="20sp"
            android:textStyle="bold" />

        <Button android:id="@+id/activitiesview" android:layout_width="0dp"
            android:layout_height="100dp" android:layout_gravity="right"
            android:layout_marginBottom="40dp" android:layout_marginLeft="5dp"
            android:layout_weight="1.00" android:alpha="0.6" android:clickable="true"
            android:text="@string/activities" android:textColor="@color/red" android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>